--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.3.5",
     "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
+    "eventsource": "^2.0.2",
     "node-fetch": "^3.3.1",
     "ws": "^8.13.0"
   }
